# munch

./: CHANGELOG.md  README.md  index.md  makefile  munch.cabal  stack.yaml
docs/: index.html  munch-test.html  munch.html
src/Text/ParserCombinators/: Munch.lhs
test/: Test.lhs
